added themed option

--- a/sandbox/card/index.html
+++ b/sandbox/card/index.html
@@ -14,7 +14,7 @@ title: Card
 			<section>
 				<img class="left image-circular" src="images/rogerheaston.jpg">
 				<address>
-					Roger Heaston<br>
+					<strong>Roger Heaston</strong><br>
 					1390 Lawrence St.<br>
 					Denver, CO 80202<br>
 					<a class="tel" href="tel:+3039999999">303-999-9999</a><br>
