--- a/sandbox/index.html
+++ b/sandbox/index.html
@@ -7,6 +7,7 @@ title: sandbox
 	<div class="vertical lined">
 		<ul>
 			<li><a href="card">Card</a></li>
+      <li><a href="nav">Navigation</a></li>
 		</ul>
 	</div>
 </div>
