added rich media component

--- a/sandbox/card/index.html
+++ b/sandbox/card/index.html
@@ -14,16 +14,18 @@ title: Card
 			<section>
 				<img class="left image-circular" src="images/mortaaronson.jpg">
 				<address>
-					<strong>Mort Aaronson</strong><br>
+					<h5>Mort Aaronson</h5>
 					1390 Lawrence St.<br>
 					Denver, CO 80204<br>
 					<a class="tel" href="tel:+3032962413">(303) 296-2413</a><br>
-					<a href="mailto:roger@placewise.com">mort@placewise.com</a>
+					<a href="mailto:mort@placewise.com">mort@placewise.com</a>
+          <hr>
+          <p>30 years senior management of public and private corporations in tech, energy, media, advertising and food industries.</p>
 				</address>
 			</section>
 
 			<footer>
-				<button class="btn btn-primary toggle-details">
+				<button class="btn btn-primary">
 				  Show Details
 				</button>
 			</footer>
@@ -41,16 +43,18 @@ title: Card
       <section>
         <img class="left image-circular" src="images/johndee.jpg">
         <address>
-          <strong>John Dee</strong><br>
+          <h5>John Dee</h5>
           1390 Lawrence St.<br>
           Denver, CO 80204<br>
           <a class="tel" href="tel:+3032962413">(303) 296-2413</a><br>
-          <a href="mailto:roger@placewise.com">john@placewise.com</a>
+          <a href="mailto:john@placewise.com">john@placewise.com</a>
+          <hr>
+          <p>20 years developing Internet, wireless and social community-based platforms; leader in development of Internet, wireless and consumer bundling.</p>
         </address>
       </section>
 
       <footer>
-        <button class="btn btn-primary toggle-details">
+        <button class="btn btn-primary">
           Show Details
         </button>
       </footer>
@@ -68,16 +72,18 @@ title: Card
       <section>
         <img class="left image-circular" src="images/rogerheaston.jpg">
         <address>
-          <strong>Roger Heaston</strong><br>
+          <h5>Roger Heaston</h5>
           1390 Lawrence St.<br>
           Denver, CO 80204<br>
           <a class="tel" href="tel:+3032962413">(303) 296-2413</a><br>
           <a href="mailto:roger@placewise.com">roger@placewise.com</a>
+          <hr>
+          <p>15 years of technology and management experience with extensive expertise in consumer-facing Internet, mobile and sales automation applications.</p>
         </address>
       </section>
 
       <footer>
-        <button class="btn btn-primary toggle-details">
+        <button class="btn btn-primary">
           Show Details
         </button>
       </footer>
