--- a/sandbox/index.html
+++ b/sandbox/index.html
@@ -8,6 +8,7 @@ title: sandbox
 		<ul>
 			<li><a href="card">Card</a></li>
       <li><a href="nav">Navigation</a></li>
+      <li><a href="rich-media">Rich Media</a></li>
 		</ul>
 	</div>
 </div>
