hold card position

--- a/sandbox/rich-media/index.html
+++ b/sandbox/rich-media/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Rich Media
 ---
 
-<div class="rich-media">
+<div class="rich-media open">
   <div class="media-close"></div>
   <header>
     <span class="h5">Rich Media Example</span>
